hphp/hack/test/typecheck/explicit_type_collection/explicit_type_collection_arity_mismatch2.php
<?hh

function f(): void {
  $a = dict<string>[];
}
